samples/_failures_safe/1761310203_f05d17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7ff467b.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c7ff467b.c:148:21: error: expected expression at end of input
  148 |                     dist[v] =
      |                     ^~~~
./samples/SAFE/__tmp_c7ff467b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7ff467b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7ff467b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7ff467b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7ff467b.c:148:21: error: expected declaration or statement at end of input
